fix: fix overflow in mobile version

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -275,8 +275,8 @@
   .hero-carousel {
     display: block;
     width: 100%;
-    overflow: visible;
-    margin-top: 16px;
+      overflow: hidden;
+      margin-top: 16px;
     margin-bottom: -160px;
     z-index: 2;
     position: relative;
